--- a/.devops/azure-templates/deployment-rollback.yml
+++ b/.devops/azure-templates/deployment-rollback.yml
@@ -19,11 +19,16 @@ parameters:
   # the application name to be used as a base name in helm new/old deployment
   - name: APP_NAME
     type: string
+  # deploy agent pool name to be used
+  - name: "DEPLOY_AGENT_POOL_NAME"
+    type: string
 
 stages:
   # STEP 0: scale up old release (by removing annotation on old release scaledObject)
   - stage: Scale_Up_Old_Deployment
     displayName: Scale up OLD deployment
+    pool:
+      name: ${{ parameters.DEPLOY_AGENT_POOL_NAME }}
     jobs:
       - job: Scale_Up_Old_Deployment
         displayName: Remove annotation autoscaling.keda.sh/paused-replicas="0" from old release scaledObject
@@ -56,6 +61,8 @@ stages:
   - stage: Start_Old_Stop_New_Receivers_Rollback
     displayName: Start OLD receivers and stop new ones
     dependsOn: Start_Old_Stop_New_Receivers_Manual_Approve_Rollback
+    pool:
+      name: ${{ parameters.DEPLOY_AGENT_POOL_NAME }}
     jobs:
       - job: Start_Old_Stop_New_Receivers_Rollback
         displayName: Start OLD receivers and stop new ones for rollback processing (swap back deployments)
@@ -75,6 +82,8 @@ stages:
   - stage: Rollback_New_Deployment_Helm_Release
     displayName: Rollback new deployment helm release
     dependsOn: Start_Old_Stop_New_Receivers_Rollback
+    pool:
+      name: ${{ parameters.DEPLOY_AGENT_POOL_NAME }}
     jobs:
       - job: Rollback_New_Deployment_Helm_Release
         displayName: Rollback new helm release to previous version
@@ -108,6 +117,8 @@ stages:
   - stage: Start_New_Stop_Old_Receivers_Rollback
     displayName: Start new receivers and stop old one approval for Rollback
     dependsOn: Start_New_Stop_Old_Receivers_Manual_Approve_Rollback
+    pool:
+      name: ${{ parameters.DEPLOY_AGENT_POOL_NAME }}
     jobs:
       - job: Start_New_Stop_Old_Receivers_Rollback
         displayName: Start NEW receivers and stop OLD for rollback processing (swap back deployments)
@@ -126,9 +137,9 @@ stages:
   - stage: Scale_Down_Old_Deployment_Approval_Rollback
     dependsOn: Start_New_Stop_Old_Receivers_Rollback
     displayName: Approval for scale down old deployment PODS
+    pool: server
     jobs:
       - job: Scale_Down_Old_Deployment_Approval
-        pool: server
         timeoutInMinutes: 30
         steps:
           - task: ManualValidation@0
@@ -140,6 +151,8 @@ stages:
   - stage: Scale_Down_Old_Deployment_Rollback
     dependsOn: Scale_Down_Old_Deployment_Approval_Rollback
     displayName: Scale down OLD deployment to 0 pods
+    pool:
+      name: ${{ parameters.DEPLOY_AGENT_POOL_NAME }}
     jobs:
       - job: Scale_Down_Old_Deployment_Rollback
         displayName: Annotate scaledObject with autoscaling.keda.sh/paused-replicas="0"
