--- a/.devops/deploy-pipelines.yml
+++ b/.devops/deploy-pipelines.yml
@@ -511,7 +511,7 @@ stages:
       VALUE_FILE: "helm/values-prod.yaml"
       HELM_NEW_RELEASE_FILTER: $(K8S_IMAGE_REPOSITORY_NAME)-new
       RELEASE_TASK_NAME: Release
-      RELEASE_TASK_VERSION_OUTPUT_VARIABLE: Release
+      RELEASE_TASK_VERSION_OUTPUT_VARIABLE: chart_current_version.version
       DEPLOY_AGENT_POOL_NAME: pagopa-prod-linux
   # --- END Deploy PROD --- #
 
